# protoJS

./: .gitignore  ARCHITECTURE.md  AUDIT_ACTION_PLAN.md  AUDIT_OUTCOME_SUMMARY.md  AUDIT_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  COMMERCIAL_IMPACT_REPORT.md  COMPILATION_FIXES_COMPLETED.txt  COMPILATION_STATUS.md  COMPILATION_TEST_RESULTS.md  COMPLETE_DELIVERABLES_LIST.txt  COMPREHENSIVE_TECHNICAL_AUDIT_2026.md  CRITICAL_PHASE_1_COMPLETE.md  DEFERRED_CODE_FLOW.md  DEFERRED_IMPLEMENTATION.md  DELIVERABLES.txt  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LINKER_ISSUES_RESOLUTION.md  LINKER_ISSUES_RESOLVED_REPORT.md  LINKER_WORKAROUND_IMPLEMENTATION.md  NEXT_STEPS.md  PHASE1_COMPLETION.md  PHASE2_NEXT_STEPS.md  PHASE3_IMPLEMENTATION_STATUS.md  PHASE3_IMPROVEMENT_PLAN.md  PHASE3_LINKER_NOTES.md  PHASE_2_KICKOFF.md  PLAN.md  PROGRESS_UPDATE.md  README.md  SESSION_SUMMARY.md  TECHNICAL_AUDIT.md  TECHNICAL_AUDIT_2026.md  TECHNICAL_AUDIT_FINAL.md  (+9 more)
docs/: API_REFERENCE.md  BENCHMARK_ANALYSIS.md  BENCHMARK_CI.md  DEFERRED_USAGE.md  EXAMPLES.md  INSTALLATION.md  MODULE_DISCOVERY_PROTOCORE.md  NATIVE_MODULES.md  PERFORMANCE_REPORT.md  PERFORMANCE_RUN_2026-02-07.md  PERFORMANCE_TESTING.md  PHASE2_COMPLETION.md  PHASE3_BUFFER_MODULE.md  PHASE3_COMPLETION.md  PHASE3_DEBUGGING.md  PHASE3_ERROR_HANDLING.md  PHASE3_GCBRIDGE.md  PHASE3_HTTP_MODULE.md  PHASE3_LOGGING_MONITORING.md  PHASE3_NET_MODULE.md  PHASE3_PERFORMANCE_OPTIMIZATION.md  PHASE3_PLAN.md  PHASE3_PROFILING.md  PHASE3_STREAM_MODULE.md  PHASE3_TESTING_INFRASTRUCTURE.md  PHASE4_COMPLETION.md  PHASE6_COMPLETION.md  PHASE6_MODULE_GUIDES.md  PROTOCORE_MODULE.md  THREAD_POOLS.md  TROUBLESHOOTING.md
docs/performance/: sample_performance_report.html
packaging/: DOCUMENTATION.md  PROCEDURES.md  build_deb.sh
packaging/templates/linux/: control.template  preinst.template  protoJS.spec.template
packaging/templates/macos/: preinstall.template
packaging/templates/windows/: protoJS.wxs.template
src/: CPUThreadPool.cpp  CPUThreadPool.h  Deferred.cpp  Deferred.h  ErrorHandler.cpp  ErrorHandler.h  EventLoop.cpp  EventLoop.h  ExecutionEngine.cpp  ExecutionEngine.h  GCBridge.cpp  GCBridge.h  IOThreadPool.cpp  IOThreadPool.h  JSContext.cpp  JSContext.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  TypeBridge.cpp  TypeBridge.h  console.cpp  console.h  main.cpp
src/benchmarking/: BenchmarkRunner.cpp  BenchmarkRunner.h
src/debugging/: IntegratedDebugger.cpp  IntegratedDebugger.h
src/logging/: Logger.cpp  Logger.h
src/memory/: MemoryAnalyzer.cpp  MemoryAnalyzer.h
src/modules/: AsyncModuleLoader.cpp  AsyncModuleLoader.h  CommonJSLoader.cpp  CommonJSLoader.h  ESModuleLoader.cpp  ESModuleLoader.h  IOModule.cpp  IOModule.h  ModuleCache.cpp  ModuleCache.h  ModuleInterop.cpp  ModuleInterop.h  ModuleResolver.cpp  ModuleResolver.h  ProcessModule.cpp  ProcessModule.h  ProtoCoreModule.cpp  ProtoCoreModule.h
src/modules/buffer/: BufferModule.cpp  BufferModule.h
src/modules/child_process/: ChildProcessModule.cpp  ChildProcessModule.h
src/modules/cluster/: ClusterModule.cpp  ClusterModule.h
src/modules/crypto/: CryptoModule.cpp  CryptoModule.h
src/modules/dgram/: DgramModule.cpp  DgramModule.h
src/modules/dns/: DNSModule.cpp  DNSModule.h
src/modules/events/: EventsModule.cpp  EventsModule.h
src/modules/fs/: FSModule.cpp  FSModule.h
src/modules/http/: HTTPModule.cpp  HTTPModule.h
src/modules/net/: NetModule.cpp  NetModule.h
src/modules/path/: PathModule.cpp  PathModule.h
src/modules/stream/: StreamModule.cpp  StreamModule.h
src/modules/url/: URLModule.cpp  URLModule.h
src/modules/util/: UtilModule.cpp  UtilModule.h
src/modules/worker_threads/: WorkerThreadsModule.cpp  (+1 more)
src/monitoring/: Metrics.cpp  Metrics.h
src/native/: DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  NativeModuleABI.h  NativeModuleWrapper.cpp  NativeModuleWrapper.h
src/npm/: JsonParser.cpp  JsonParser.h  NPMRegistry.cpp  NPMRegistry.h  PackageInstaller.cpp  PackageInstaller.h  PackageResolver.cpp  PackageResolver.h  ScriptExecutor.cpp  ScriptExecutor.h  Semver.cpp  Semver.h
src/profiling/: Profiler.cpp  Profiler.h  VisualProfiler.cpp  VisualProfiler.h
src/repl/: REPL.cpp  REPL.h
src/testing/: NodeJSTestRunner.cpp  NodeJSTestRunner.h
tests/: CMakeLists.txt  test_real_deferred.js
tests/benchmarks/: array_operations.js  basic_types.js  benchmark_runner.js  collections.js  combine_suite.sh  combined_performance_suite.js  combined_protojs_suite.js  compare_engines.js  concurrent_operations.js  generate_sample_report.js  minimal_test.js  node_results.html  overall_performance.js  phase6_benchmark_suite.js  quick_suite.js  report_generator.js  run_all.js  run_nodejs_comparison.js  run_performance_suite.js  run_protojs.js  run_quick.js  sample_report_suite.js  suite_config.txt
tests/demos/: deferred_demo.js  immutable_arrays.js  protoCore_collections.js  test_virtual_threads.js
tests/integration/: test_deferred_basic.js
tests/integration/basic/: arithmetic.js  hello_world.js  strings.js
tests/integration/buffer/: test_buffer.js
tests/integration/collections/: arrays.js  protoCore_collections.js
tests/integration/crypto/: test_crypto.js
tests/integration/deferred/: concurrent_deferred.js
tests/integration/fs/: test_fs.js
tests/integration/http/: test_http.js
tests/integration/modules/: console.js  io.js  process.js  test_require.js  test_umd_bare_specifier.js
tests/integration/native_addons/: fixture.js  test_native_require.js  test_resolution.js
tests/integration/net/: test_net.js
tests/integration/profiling/: test_profiler.js
tests/integration/stream/: test_stream.js
tests/native_addons/fixture/: fixture_addon.cpp
tests/native_addons/simple/: simple_addon.cpp
tests/scripts/: hello.js
tests/testing/: test_suite_config.txt
tests/unit/: test_benchmark_runner.cpp  test_event_loop.cpp  test_io_thread_pool.cpp  test_main.cpp  test_nodejs_test_runner.cpp  test_npm_registry.cpp  test_semver.cpp  test_thread_pools.cpp
